<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EduYC_PreguntasFrecuentes">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginRight="30dp"
                android:layout_weight="0"
                android:backgroundTint="#00673AB7"
                android:contentDescription="Regresar"
                android:onClick="regresar2"
                app:srcCompat="?attr/homeAsUpIndicator" />

            <TextView
                android:id="@+id/txtTitulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="Preguntas Frecuentes"
                android:textSize="26sp"
                android:textStyle="bold" />

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_weight="0"
                android:orientation="vertical"
                android:paddingBottom="100dp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/PregF_crdp1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    app:cardCornerRadius="15dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <TextView
                            android:id="@+id/PregF_txtpregunta1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:text="@string/faq_pregunta_1"
                            android:textStyle="bold" />

                        <View
                            android:id="@+id/divider4"
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="10dp"
                            android:background="?android:attr/listDivider" />

                        <TextView
                            android:id="@+id/PregF_txtrespuesta1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/faq_respuesta_1" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="0"
                    app:cardCornerRadius="15dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <TextView
                            android:id="@+id/PregF_txtpregunta2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/faq_pregunta_2"
                            android:textStyle="bold" />

                        <View
                            android:id="@+id/divider6"
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="10dp"
                            android:background="?android:attr/listDivider" />

                        <TextView
                            android:id="@+id/PregF_txtrespuesta2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/faq_respuesta_2" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="0"
                    app:cardCornerRadius="15dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <TextView
                            android:id="@+id/PregF_txtpregunta3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/faq_pregunta_3"
                            android:textStyle="bold" />

                        <View
                            android:id="@+id/divider7"
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="10dp"
                            android:background="?android:attr/listDivider" />

                        <TextView
                            android:id="@+id/PregF_txtrespuesta3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/faq_respuesta_3" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="0"
                    app:cardCornerRadius="15dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <TextView
                            android:id="@+id/PregF_txtpregunta4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/faq_pregunta_4"
                            android:textStyle="bold" />

                        <View
                            android:id="@+id/divider8"
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="10dp"
                            android:background="?android:attr/listDivider" />

                        <TextView
                            android:id="@+id/PregF_txtrespuesta4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/faq_respuesta_4" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_weight="0"
                    app:cardCornerRadius="15dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <TextView
                            android:id="@+id/PregF_txtpregunta5"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/faq_pregunta_5"
                            android:textStyle="bold" />

                        <View
                            android:id="@+id/divider3"
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="10dp"
                            android:background="?android:attr/listDivider" />

                        <TextView
                            android:id="@+id/PregF_txtrespuesta5"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/faq_respuesta_5" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>