<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EduYC_Articulos_Informativos">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginRight="30dp"
                android:layout_weight="0"
                android:backgroundTint="#00673AB7"
                android:contentDescription="Regresar"
                android:onClick="regresar2"
                app:srcCompat="?attr/homeAsUpIndicator" />

            <TextView
                android:id="@+id/txtTitulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="Artículos Informativos"
                android:textSize="26sp"
                android:textStyle="bold" />

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:orientation="vertical"
                android:paddingBottom="100dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="15dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:paddingTop="10sp"
                            android:paddingBottom="10sp"
                            android:text="@string/art_titulo1"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <View
                            android:id="@+id/divider5"
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginBottom="15dp"
                            android:background="?android:attr/listDivider" />

                        <ImageView
                            android:id="@+id/imageView"
                            android:layout_width="match_parent"
                            android:layout_height="140dp"
                            android:layout_marginBottom="15sp"
                            android:scaleType="center"
                            tools:srcCompat="@drawable/vacunas" />

                        <TextView
                            android:id="@+id/textView6"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/art_contenido1" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    app:cardCornerRadius="15dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <TextView
                            android:id="@+id/textView7"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:paddingTop="10sp"
                            android:paddingBottom="10sp"
                            android:text="@string/art_titulo2"
                            android:textStyle="bold" />

                        <View
                            android:id="@+id/divider9"
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginBottom="15dp"
                            android:background="?android:attr/listDivider" />

                        <ImageView
                            android:id="@+id/imageView2"
                            android:layout_width="match_parent"
                            android:layout_height="140dp"
                            android:layout_marginBottom="15sp"
                            android:scaleType="center"
                            tools:srcCompat="@drawable/fiebreamarilla" />

                        <TextView
                            android:id="@+id/textView8"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/art_contenido2" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>